--- a/package.json
+++ b/package.json
@@ -1,26 +1,18 @@
 {
   "name": "node-snowball-italian",
-  "version": "0.6.0",
+  "version": "0.1.0",
   "license": "MIT",
-  "description": "This a forked module for Node.js provides stemming capability for the italian language using Dr. M.F. Porter's Snowball API.",
+  "description": "This is a forked module for Node.js and provides stemming capability for the italian language using Dr. M.F. Porter's Snowball API. This module was created to compile only one specific language (italian).",
   "authors": [
-    "Harold Thetiot <hthetiot@gmail.com> (http://melchizetech.com)",
-    "Richard Hull <rm_hull@yahoo.co.uk>"
+    "TheGrinch00"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/hthetiot/node-snowball"
+    "url": "https://github.com/thegrinch00/node-snowball-italian"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/hthetiot/node-snowball/blob/master/LICENSE"
-    }
-  ],
   "main": "index.js",
   "scripts": {
-    "start": "npm build . && jest",
-    "test": "jest"
+    "start": "npm build ."
   },
   "dependencies": {
     "nan": "^2.14.0"
